# 42_ft_turing

./: .gitignore  Dockerfile  README.md  container_script.sh  docker-compose.yml  ft-turing.cabal  timeCompl.csv  turing.cabal
app/: Baby.hs  Main  Main.hi  Main.hs  Tools.hs  Turing.hi  Turing.hs  TuringDataTypes.hs  Types.hs
bonus/: curveDrawer.py  script_language02n.sh  script_language0n1n.sh  script_palindrome.sh  script_turing.sh  script_unary_add.sh
machines/: goToInf.json  language02n.json  language0n1n.json  machine5_is_a_troll.json  palindrome.json  turing.json  turing_input_exemple  unary_add.json  unary_add2.json
src/: Checking.hs  DisplayConfig.hs  Turing.hs  Types.hs
tests/: test.hs
