cabal-version:      3.0
name:               ft-turing
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             pouet
maintainer:         git@mesoule.tamere
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable ft-turing
    import:           warnings
    main-is:          Main.hs
    other-modules: Types
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1,
                      aeson,
                      bytestring,
                      containers
    hs-source-dirs:   app, src
    default-language: Haskell2010
