cabal-version:      3.0
name:               turing
version:            0.1.0.0
build-type:         Simple

executable turing
    main-is:            Main.hs
    hs-source-dirs:     app, src
    other-modules:      Types
    build-depends:      base >=4.13 && <4.14,
                        bytestring,
                        aeson
    default-language:   Haskell2010
