cabal-version:      3.0
name:               turing
version:            0.1.0.0
build-type:         Simple

executable turing
    main-is:            Main.hs
    hs-source-dirs:     app, src
    other-modules:      Types
    build-depends:      base ^>=4.17.2.1,
                        bytestring,
                        aeson, 
                        containers,
						unordered-containers,
						text
    default-language:   Haskell2010
